# lumen-frontend

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
assets/css/: app_style.css  button_style.css  discussions_style.css  header_style.css  home_style.css  input_field_style.css  login_style.css  post_list_style.css  post_style.css  register_style.css  thread_list_style.css  thread_post_style.css  thread_style.css
assets/js/: mageJumping.js  mageVsZombies.js  playAudio.js  snake.js
src/: js.rs  lib.rs  main.rs  router.rs
src/apis/: backend_api.rs  mod.rs  news_api.rs
src/components/: discussions.rs  header.rs  home.rs  login.rs  mod.rs  register.rs  showcase.rs
src/components/discussion_components/: mod.rs  post.rs  post_list.rs  thread.rs  thread_list.rs  thread_post.rs
src/components/ui/: button.rs  input_field.rs
src/models/: mod.rs  news.rs  post.rs  thread.rs  user.rs
src/requests/: get_threads.rs  mod.rs  news_api.rs  post_login.rs  post_logout.rs  post_thread.rs  post_user.rs  request.rs
src/style/: app_style.rs  button_style.rs  discussions_style.rs  header_style.rs  home_style.rs  input_field_style.rs  login_style.rs  mod.rs  post_list_style.rs  register_style.rs  set_styles.rs  thread_post_style.rs  thread_style.rs
