[package]
name = "lumen-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Timo Caktu <timocaktu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
stylist = { version="0.11", features = ["yew_integration"] }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'EventTarget',
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]