[package]
name = "lumen-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Timo Caktu <timocaktu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
js-sys = "0.3.64"
yew-router = "0.17"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.102"
reqwasm = "0.5.0"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Location',
  'EventTarget',
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Storage',
]
